syntax = "proto3";

import "google/protobuf/wrappers.proto";

option go_package = "/proto";

service Library{
  rpc AddBook(Book) returns(BookID);
  rpc GetBook(BookID) returns(Book);
  rpc GetAll(google.protobuf.StringValue) returns(BookList);
  rpc UpdateBook(Book) returns (google.protobuf.StringValue);
  rpc DeleteBook(BookID) returns (google.protobuf.StringValue);
  rpc SearchBookByName(BookName) returns (BookList);
}

message Book {
  int32 id = 1;
  string name = 2;
  string author = 3;
  string year = 4;
}
message BookID {
  int32 id = 1;
}
message BookName {
  string name = 1;
}
message BookList {
  repeated Book books = 1;
}